# MCP-HUB

./: .gitignore  README.md
mcp-blender-bridge/: .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp-blender-bridge/.github/workflows/: ci.yml
mcp-blender-bridge/blender_addon/: mcp_blender_bridge.py
mcp-blender-bridge/blender_addon/chat_panel/: __init__.py  depsgraph_listener.py  threading_bridge.py  tool_dispatcher.py  tool_format.py
mcp-blender-bridge/blender_addon/chat_panel/providers/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py  registry.py
mcp-blender-bridge/docs/: ARCHITECTURE.md
mcp-blender-bridge/examples/: direct_client_test.py
mcp-blender-bridge/plugins/hyper3d/: README.md  pyproject.toml
mcp-blender-bridge/plugins/hyper3d/src/mcp_blender_bridge_hyper3d/: __init__.py  plugin.py  schemas.py  tools.py
mcp-blender-bridge/plugins/hyper3d/tests/: test_plugin.py  test_schemas.py  test_tools.py
mcp-blender-bridge/plugins/polyhaven/: README.md  pyproject.toml
mcp-blender-bridge/plugins/polyhaven/src/mcp_blender_bridge_polyhaven/: __init__.py  plugin.py  schemas.py  tools.py
mcp-blender-bridge/plugins/polyhaven/tests/: test_plugin.py  test_schemas.py  test_tools.py
mcp-blender-bridge/plugins/sketchfab/: README.md  pyproject.toml
mcp-blender-bridge/plugins/sketchfab/src/mcp_blender_bridge_sketchfab/: __init__.py  plugin.py  schemas.py  tools.py
mcp-blender-bridge/plugins/sketchfab/tests/: test_plugin.py  test_schemas.py  test_tools.py
mcp-blender-bridge/src/blender_bridge/: __init__.py  _log_formatter.py  asset_cache.py  client.py  headless_blender.py  plugins.py  schemas.py  server.py  utils.py
mcp-blender-bridge/src/blender_bridge/tools/: __init__.py  code.py  modal.py  objects.py  render.py  scene.py
mcp-blender-bridge/tests/: __init__.py  test_addon_dispatch.py  test_asset_cache.py  test_client.py  test_headless_blender.py  test_plugins.py  test_schemas.py  test_server_features.py  test_tools_code.py  test_tools_objects.py  test_tools_render.py  test_tools_scene.py  test_transport.py  test_utils.py
mcp-blender-bridge/tests/test_chat_panel/: conftest.py  test_depsgraph_listener.py  test_macro_recorder.py  test_modal_dispatcher.py  test_providers.py  test_threading_bridge.py  test_tool_format.py
