[project]
name = "mcp-blender-bridge-sketchfab"
version = "0.1.0"
description = "Sketchfab 3D model search and download plugin for MCP-Blender-Bridge."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.entry-points."blender_bridge.plugins"]
sketchfab = "mcp_blender_bridge_sketchfab:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_blender_bridge_sketchfab"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
